--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.example</groupId>
     <artifactId>SAIKAT-SYSTEMS-APP</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
